Address follow-up structured file review